peak6-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: peak6
  name: peak6-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peak6
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: peak6
    spec:
      containers:
      - image: sezginmutlu6/peak6:latest
        name: peak6
        ports:
        - containerPort: 5000
