np-peak6.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-peak6
spec:
  selector:
    app: peak6
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 5000
  type: NodePort
