peak6-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: peak-nodeport-svc
spec:
  selector:
    app: peak6
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 5000
  type: NodePort
---
  apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: peak6-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: peak-nodeport-svc
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: peak6
  name: peak6-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peak6
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: peak6
    spec:
      containers:
      - image: sezginmutlu6/peak6:latest
        name: peak6
        ports:
        - containerPort: 5000
