peak6-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: peak6
  name: peak6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peak6
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: peak6
    spec:
      containers:
      - image: sezginmutlu6/peak6:latest
        name: peak6
        ports:
        - containerPort: 5000
devopscyberchicago@cloudshell:~$ cat ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: peak6-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: np-peak6
          servicePort: 80
